force-app/main/default/objects/DDRL_Config__c/DDRL_Config__c.object-meta.xml
<CustomObject>
    <label>DD Related List Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Related List Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>