force-app/main/default/objects/DDRL_Config__c/fields/additionalWhereClause__c.field-meta.xml
<CustomField>
    <fullName>additionalWhereClause__c</fullName>
    <inlineHelpText>The SQL/SOQL will automatically be scoped to the unified individual.  Additional filters can be applied here. eg. ssot__CaseStatusId__c != &apos;Closed&apos;.  Don&apos;t include WHERE at the front.</inlineHelpText>
    <label>Additional WHERE Clauses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>