force-app/main/default/objects/DDRL_Config__c/fields/dcObjectName__c.field-meta.xml
<CustomField>
    <fullName>dcObjectName__c</fullName>
    <inlineHelpText>The Data Cloud (or other) object that you&apos;re retrieving in this related list</inlineHelpText>
    <label>Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>