force-app/main/default/objects/DDRL_Config__c/fields/keyQualifierField__c.field-meta.xml
<CustomField>
    <fullName>keyQualifierField__c</fullName>
    <inlineHelpText>If KQ fields are used, specify the KQ field on this object here.</inlineHelpText>
    <label>Key Qualifier Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>