force-app/main/default/objects/DDRL_Config__c/fields/orderByClause__c.field-meta.xml
<CustomField>
    <fullName>orderByClause__c</fullName>
    <inlineHelpText>eg. ORDER BY ssot__Id__c ASC.  Must include &quot;ORDER BY&quot;.  You can optionally include a LIMIT clause after the ORDER BY.  eg. ORDER BY ssot__CreatedDate__c DESC LIMIT 10.</inlineHelpText>
    <label>ORDER BY Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>