force-app/main/default/objects/DDRL_Config__c/fields/parentIdentifierField__c.field-meta.xml
<CustomField>
    <fullName>parentIdentifierField__c</fullName>
    <inlineHelpText>For Child Related Lists, this field is the field ON THE PARENT RECORD that stores its own unique / primary key.</inlineHelpText>
    <label>Parent&apos;s Primary Key Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>