force-app/main/default/objects/DDRL_Config__c/fields/parentIdentifierThisObject__c.field-meta.xml
<CustomField>
    <fullName>parentIdentifierThisObject__c</fullName>
    <inlineHelpText>The field on the object that relates to the parent record - which might be the contact/individual, or a different CRM or DC record. For a Child Related List called Order Lines, the Parent Id Field might be Order_Id__c.</inlineHelpText>
    <label>Parent Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>