force-app/main/default/objects/DDRL_Config__c/fields/selectStatement__c.field-meta.xml
<CustomField>
    <fullName>selectStatement__c</fullName>
    <inlineHelpText>The SELECT and FROM portions of a SQL or SOQL select statement.</inlineHelpText>
    <label>SELECT Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>