force-app/main/default/objects/DDRL_Config__c/fields/uidField__c.field-meta.xml
<CustomField>
    <fullName>uidField__c</fullName>
    <inlineHelpText>Field that will contain the unique/primary Id of the displayed records.  For an Orders related list, the Primary Key Field might be Order_Id__c</inlineHelpText>
    <label>Primary Key Field</label>
    <length>55</length>
    <type>Text</type>
</CustomField>